--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Aldrich&family=Inter:wght@400;500&family=League+Spartan:wght@600&family=Orbitron:wght@700&family=Rajdhani:wght@400;500;600;700&family=Roboto:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Aldrich&family=Inter:wght@400;500&family=League+Spartan:wght@600&family=MuseoModerno&family=Orbitron:wght@700&family=Rajdhani:wght@400;500;600;700&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css" />
     <title>OceanNFT</title>
   </head>
   <body>
@@ -186,86 +189,88 @@
         </form>
       </div>
     </article>
-    <footer>
-      
-        <div class="footer__links">
-          <div class="logo">
-            <img src="assets/icons/Vector.png" alt="logo" />
-            <span>OceanNFT</span>
-          </div>
-          <p>
-            Lorem ipsum dolor amet, consectetur adipiscing elit. Eget nisl nunc
-            quam ac sed turpis volutpat. Cursus sed massa non nisi, placerat.
-          </p>
-          <div class="social-icons">
-            <img src="assets/icons/instagram.svg" alt="instagram logo" />
-            <img src="assets/icons/driblle.svg" alt="driblle logo" />
-            <img src="assets/icons/twitter.svg" alt="twitter logo" />
-            <img src="assets/icons/youtube.svg" alt="youtube logo" />
-          </div>
+    <footer class="footer">
+      <div class="footer__column">
+        <div class="logo">
+          <img src="assets/icons/Vector.svg" alt="Vector logo" />
+          <span class="footer__column__logo">OceanNFT</span>
         </div>
-        <div class="footer__links">
-          <h4>Market place</h4>
-          <ul>
-            <li>Overview</li>
-            <li>
-              Features
-              <img src="assets/icons/new.png" alt="new img" />
-            </li>
-            <li>Tutorials</li>
-            <li>Pricing</li>
-            <li>Releases</li>
-          </ul>
+        <p class="footer__column__text">
+          Lorem ipsum dolor amet, consectetur adipiscing elit. Eget nisl nunc
+          quam ac sed turpis volutpat. Cursus sed massa non nisi, placerat.
+        </p>
+        <div class="footer__column__social-icons">
+          <img src="assets/icons/instagram.svg" alt="instagram logo" />
+          <img src="assets/icons/driblle.svg" alt="driblle logo" />
+          <img src="assets/icons/twitter.svg" alt="twitter logo" />
+          <img src="assets/icons/youtube.svg" alt="youtube logo" />
         </div>
-        <div class="footer__links">
-          <h4>Collectibles</h4>
-          <ul>
-            <li>About</li>
-            <li>Press</li>
-            <li>Careers</li>
-            <li>Contact</li>
-            <li>Partners</li>
-          </ul>
-        </div>
-        <div class="footer__links">
-          <h4>Support</h4>
-          <ul>
-            <li>Help Center</li>
-            <li>Safety Center</li>
-            <li>Legal</li>
-            <li>Privacy policy</li>
-            <li>Status</li>
-          </ul>
-        </div>
-        <div class="footer__links">
-          <h4>Legal</h4>
-          <ul>
-            <li>Cookies Policy</li>
-            <li>Privacy Policy</li>
-            <li>Terms of Service</li>
-            <li>Law Enforcement</li>
-            <li>Status</li>
-          </ul>
-        </div>
-        <div class="footer__links">
-          <h4>Follow us</h4>
-          <ul>
-            <li>Facebook</li>
-            <li>Twitter</li>
-            <li>Dribbble</li>
-            <li>Instagram</li>
-            <li>LinkedIn</li>
-          </ul>
-        </div>
-      
-      <div class="copyright">
-        <p class="copyright__text">&copy; 2020 Landify UI Kit. All rights reserved</p>
-        <ul class="copyright__list">
-          <li>Terms & Conditions</li>
+      </div>
+      <div class="footer__column">
+        <h4 class="footer__column__title">Market place</h4>
+        <ul class="footer__column__list">
+          <li>Overview</li>
+          <li>
+            Features
+            <span class="footer__column__span">new</span>
+          </li>
+          <li>Tutorials</li>
+          <li>Pricing</li>
+          <li>Releases</li>
+        </ul>
+      </div>
+      <div class="footer__column">
+        <h4 class="footer__column__title">Collectibles</h4>
+        <ul class="footer__column__list">
+          <li>About</li>
+          <li>Press</li>
+          <li>Careers</li>
+          <li>Contact</li>
+          <li>Partners</li>
+        </ul>
+      </div>
+      <div class="footer__column">
+        <h4 class="footer__column__title">Support</h4>
+        <ul class="footer__column__list">
+          <li>Help Center</li>
+          <li>Safety Center</li>
+          <li>Legal</li>
+          <li>Privacy policy</li>
+          <li>Status</li>
+        </ul>
+      </div>
+      <div class="footer__column">
+        <h4 class="footer__column__title">Legal</h4>
+        <ul class="footer__column__list">
+          <li>Cookies Policy</li>
           <li>Privacy Policy</li>
-          <li>Sitemap</li>
+          <li>Terms of Service</li>
+          <li>Law Enforcement</li>
+          <li>Status</li>
+        </ul>
+      </div>
+      <div class="footer__column">
+        <h4 class="footer__column__title">Follow us</h4>
+        <ul class="footer__column__list">
+          <li>Facebook</li>
+          <li>Twitter</li>
+          <li>Dribbble</li>
+          <li>Instagram</li>
+          <li>LinkedIn</li>
         </ul>
       </div>
     </footer>
+    <div class="copyright">
+      <p class="copyright__text">
+        &copy; 2020 Landify UI Kit. All rights reserved
+      </p>
+      <ul class="copyright__list">
+        <li>
+          <a href="#" class="copyright__list__link">Terms & Conditions</a>
+        </li>
+        <li><a href="#" class="copyright__list__link">Privacy Policy</a></li>
+        <li><a href="#" class="copyright__list__link">Sitemap</a></li>
+      </ul>
+    </div>
   </body>
 </html>
