--- a/index.html
+++ b/index.html
@@ -174,8 +174,10 @@
       <div class="subscribe__content">
         <h1 class="subscribe__content__title">Subscribe to us</h1>
         <p class="subscribe__content__text">
-          Specially developed to help restore a more youthful appearance with
-          improved radiance and bounce.
+          Specially developed to help restore a more <br/>
+          youthful appearance with
+          improved radiance and <br/>
+          bounce.
         </p>
         <form class="subscribe__content__form">
           <input
