--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <header>
       <nav>
         <div class="logo">
-          <img src="assets/icons/Vector.png" alt="Vector image" />
-          <img src="assets/logo/OceanNFT.png" alt="Logo" />
+          <img src="assets/icons/Vector.svg" alt="Vector logo" />
+          <span class="footer__column__logo">OceanNFT</span>
         </div>
         <ul>
           <li>Market</li>
@@ -37,12 +37,12 @@
       </nav>
     </header>
     <div class="main__content">
-      <h1>Discover, collect, and sell <span>Timeless</span> NFTs</h1>
-      <p>
+      <h1 class="main__content__title">Discover, collect, and sell <span>Timeless</span> NFTs</h1>
+      <p class="main__content__text">
         The world’s first and largest digital marketplace for crypto
         collectibles and non- fungible tokens (NFTs).
       </p>
-      <button type="submit">
+      <button type="submit" class="main__content__btn">
         Explore
         <img
           src="assets/icons/arrow-right.svg"
@@ -55,7 +55,7 @@
         <li>18m+ Auctions</li>
         <li>500k+ Artists</li>
       </ul>
-      <div class="logo__section">
+      <div class="main__content__logo__section">
         <img src="assets/logo/Binance_logo logo.png" alt="Binance logo" />
         <img src="assets/logo/Ethereum logo.png" alt="Ethereum logo" />
         <img
@@ -133,37 +133,37 @@
         </div>
       </div>
     </section>
-    <section>
-      <h3>Top Sellers this Month</h3>
-      <p>
+    <section class="top-sellers">
+      <h3 class="top-sellers__title">Top Sellers this <span class="top-sellers__span">Month</span></h3>
+      <p class="top-sellers__text">
         Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
         sint. Velit officia consequat duis enim minim mollit.
       </p>
-      <div class="section-box">
-        <p>1</p>
-        <img src="assets/images/Ellipse 277.png" alt="women image" />
-        <h4>Eleanor Pena</h4>
+      <div class="top-sellers__section-box">
+        <p class="top-sellers__section-box__num">1</p>
+        <img src="assets/images/Ellipse 277.png" alt="women image" class="top-sellers__section-box__img"/>
+        <h4 class="top-sellers__section-box__name">Eleanor Pena</h4>
         <img src="assets/icons/Vector.svg" alt="vector image" />
         <p>74875</p>
-        <span>+468.48%</span>
+        <span class="top-sellers__section-box--success">+468.48%</span>
       </div>
-      <div class="section-box">
+      <div class="top-sellers__section-box">
         <p>2</p>
         <img src="assets/images/Ellipse 277 (1).png" alt="women image" />
         <h4>Savannah Nguyen</h4>
         <img src="assets/icons/Vector.svg" alt="vector image" />
         <p>18599</p>
-        <span>+468.48%</span>
+        <span class="top-sellers__section-box--alert">+468.48%</span>
       </div>
-      <div class="section-box">
+      <div class="top-sellers__section-box">
         <p>3</p>
         <img src="assets/images/Ellipse 277 (2).png" alt="women image" />
         <h4>Arlene McCoy</h4>
         <img src="assets/icons/Vector.svg" alt="vector image" />
         <p>45904</p>
-        <span>+468.48%</span>
+        <span class="top-sellers__section-box--success">+468.48%</span>
       </div>
-      <button type="submit">Explore all</button>
+      <button type="submit" class="top-sellers__btn">Explore all</button>
     </section>
     <article class="subscribe">
       <img
