--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
       </nav>
     </header>
     <div class="main__content">
-      <h1 class="main__content__title">Discover, collect, and sell <span>Timeless</span> NFTs</h1>
+      <h1 class="main__content__title">
+        Discover, collect, and sell <span>Timeless</span> NFTs
+      </h1>
       <p class="main__content__text">
         The world’s first and largest digital marketplace for crypto
         collectibles and non- fungible tokens (NFTs).
@@ -66,82 +68,96 @@
       </div>
     </div>
 
-    <section>
-      <h3>Explore Collections</h3>
-      <p>View all</p>
-      <img src="assets/icons/arrow-right.svg" alt="arrow right icon" />
-      <div class="card">
-        <div class="card__background">
-          <!-- <img
-          src="assets/images/unsplash_NTYYL9Eb9y8.png"
-          alt="abstract image"
-        /> -->
-        </div>
-        <div class="card__content">
-          <img src="assets/images/unsplash_d1UPkiFd04A.png" alt="men image" />
-          <h4>Jhones Nickey</h4>
-          <p>@jhonartist</p>
-          <img src="assets/icons/image 46.png" alt="verified icon" />
-          <ul>
-            <li>125 Folowers</li>
-            <li>256 Following</li>
-            <li>129 Artworks</li>
-          </ul>
-          <button type="submit">Follow</button>
-        </div>
+    <section class="collections">
+      <div class="collections__div">
+        <h3 class="collections__div__title">Explore Collections</h3>
+        <p class="collections__div__view">View all</p>
+        <img src="assets/icons/arrow-right.svg" alt="arrow right icon" />
       </div>
 
-      <div class="card">
-        <div class="card__background">
-          <!-- <img
-          src="assets/images/unsplash_NTYYL9Eb9y8.png"
-          alt="abstract image"
-        /> -->
+      <div class="collections__card-div">
+        <div class="collections__card">
+          <div class="collections__card-background"></div>
+          <div class="collections__card-content">
+            <img
+              src="assets/images/unsplash_d1UPkiFd04A.png"
+              alt="men image"
+              class="collections__card-content__img"
+            />
+            <h4 class="collections__card-content__title">Jhones Nickey</h4>
+            <p class="collections__card-content__user">@jhonartist</p>
+            <img src="assets/icons/image 46.png" alt="verified icon" />
+            <ul>
+              <li>125 Folowers</li>
+              <li>256 Following</li>
+              <li>129 Artworks</li>
+            </ul>
+            <button type="submit" class="collections__card-content__btn">
+              Follow
+            </button>
+          </div>
         </div>
-        <div class="card__content">
-          <img src="assets/images/unsplash_jFAG_ixCrsM.png" alt="men image" />
-          <h4>Cody Fisher</h4>
-          <p>@codyfishe</p>
-          <img src="assets/icons/image 46.png" alt="verified icon" />
-          <ul>
-            <li>356 Folowers</li>
-            <li>456 Following</li>
-            <li>89 Artworks</li>
-          </ul>
-          <button type="submit">Follow</button>
-        </div>
-      </div>
 
-      <div class="card">
-        <div class="card__background">
-          <!-- <img
-          src="assets/images/unsplash_NTYYL9Eb9y8.png"
-          alt="abstract image"
-        /> -->
+        <div class="collections__card">
+          <div class="collections__card-background"></div>
+          <div class="collections__card-content">
+            <img
+              src="assets/images/unsplash_jFAG_ixCrsM.png"
+              alt="women image"
+              class="collections__card-content__img"
+            />
+            <h4 class="collections__card-content__title">Cody Fisher</h4>
+            <p class="collections__card-content__user">@codyfishe</p>
+            <img src="assets/icons/image 46.png" alt="verified icon" />
+            <ul>
+              <li>356 Folowers</li>
+              <li>456 Following</li>
+              <li>89 Artworks</li>
+            </ul>
+            <button type="submit" class="collections__card-content__btn">
+              Follow
+            </button>
+          </div>
         </div>
-        <div class="card__content">
-          <img src="assets/images/unsplash_MtSF6U6gy2Q.png" alt="men image" />
-          <h4>Jerome Bell</h4>
-          <p>@jeromebt</p>
-          <img src="assets/icons/image 46.png" alt="verified icon" />
-          <ul>
-            <li>546 Folowers</li>
-            <li>789 Following</li>
-            <li>54 Artworks</li>
-          </ul>
-          <button type="submit">Follow</button>
+
+        <div class="collections__card">
+          <div class="collections__card-background"></div>
+          <div class="collections__card-content">
+            <img
+              src="assets/images/unsplash_MtSF6U6gy2Q.png"
+              alt="women image"
+              class="collections__card-content__img"
+            />
+            <h4 class="collections__card-content__title">Jerome Bell</h4>
+            <p class="collections__card-content__user">@jeromebt</p>
+            <img src="assets/icons/image 46.png" alt="verified icon" />
+            <ul>
+              <li>546 Folowers</li>
+              <li>789 Following</li>
+              <li>54 Artworks</li>
+            </ul>
+            <button type="submit" class="collections__card-content__btn">
+              Follow
+            </button>
+          </div>
         </div>
       </div>
     </section>
     <section class="top-sellers">
-      <h3 class="top-sellers__title">Top Sellers this <span class="top-sellers__span">Month</span></h3>
+      <h3 class="top-sellers__title">
+        Top Sellers this <span class="top-sellers__span">Month</span>
+      </h3>
       <p class="top-sellers__text">
         Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
         sint. Velit officia consequat duis enim minim mollit.
       </p>
       <div class="top-sellers__section-box">
         <p class="top-sellers__section-box__num">1</p>
-        <img src="assets/images/Ellipse 277.png" alt="women image" class="top-sellers__section-box__img"/>
+        <img
+          src="assets/images/Ellipse 277.png"
+          alt="women image"
+          class="top-sellers__section-box__img"
+        />
         <h4 class="top-sellers__section-box__name">Eleanor Pena</h4>
         <img src="assets/icons/Vector.svg" alt="vector image" />
         <p>74875</p>
@@ -174,9 +190,8 @@
       <div class="subscribe__content">
         <h1 class="subscribe__content__title">Subscribe to us</h1>
         <p class="subscribe__content__text">
-          Specially developed to help restore a more <br/>
-          youthful appearance with
-          improved radiance and <br/>
+          Specially developed to help restore a more <br />
+          youthful appearance with improved radiance and <br />
           bounce.
         </p>
         <form class="subscribe__content__form">
@@ -193,9 +208,9 @@
     </article>
     <footer class="footer">
       <div class="footer__column">
-        <div class="logo">
-          <img src="assets/icons/Vector.svg" alt="Vector logo" />
-          <span class="footer__column__logo">OceanNFT</span>
+        <div >
+          <img src="assets/icons/Vector.svg" alt="Vector logo" class="footer__column__logo"/>
+          <span class="footer__column__logo-text">OceanNFT</span>
         </div>
         <p class="footer__column__text">
           Lorem ipsum dolor amet, consectetur adipiscing elit. Eget nisl nunc
