--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="header__nav">
         <div class="logo">
           <img src="assets/icons/Vector.svg" alt="Vector logo" />
           <span class="footer__column__logo">OceanNFT</span>
@@ -37,27 +37,34 @@
       </nav>
     </header>
     <div class="main__content">
-      <h1 class="main__content__title">
-        Discover, collect, and sell <span>Timeless</span> NFTs
-      </h1>
-      <p class="main__content__text">
-        The world’s first and largest digital marketplace for crypto
-        collectibles and non- fungible tokens (NFTs).
-      </p>
-      <button type="submit" class="main__content__btn">
-        Explore
-        <img
-          src="assets/icons/arrow-right.svg"
-          alt="Arrow rigth icon"
-        /></button
-      >Create NFT’s
-      <h4>Create NFT’s</h4>
-      <ul>
-        <li>35m+ Artwork</li>
-        <li>18m+ Auctions</li>
-        <li>500k+ Artists</li>
-      </ul>
-      <div class="main__content__logo__section">
+      <div class="main__content__left-div">
+        <h1 class="main__content__title">
+          Discover, collect, and sell
+          <span class="main__content__title-span">Timeless</span> NFTs
+        </h1>
+        <p class="main__content__text">
+          The world’s first and largest digital marketplace for crypto
+          collectibles and non- fungible tokens (NFTs).
+        </p>
+        <button type="submit" class="main__content__btn">
+          Explore
+          <img src="assets/icons/arrow-right.svg" alt="Arrow rigth icon" />
+        </button>
+        <p class="main__content__heading">Create NFT’s</p>
+        <ul class="main__content__list">
+          <li><span class="main__content__list-span">35m+</span> Artwork</li>
+          <li><span class="main__content__list-span">18m+</span> Auctions</li>
+          <li><span class="main__content__list-span">500k+</span> Artists</li>
+        </ul>
+      </div>
+
+      <div class="main__content__right-div">
+        <img src="assets/images/image 62.png" alt="Main image" />
+      </div>
+      
+    </div>
+
+    <div class="main__content__logo__section">
         <img src="assets/logo/Binance_logo logo.png" alt="Binance logo" />
         <img src="assets/logo/Ethereum logo.png" alt="Ethereum logo" />
         <img
@@ -66,7 +73,6 @@
         />
         <img src="assets/logo/Group 25.png" alt="Bitmex logo" />
       </div>
-    </div>
 
     <section class="collections">
       <div class="collections__div">
@@ -208,8 +214,12 @@
     </article>
     <footer class="footer">
       <div class="footer__column">
-        <div >
-          <img src="assets/icons/Vector.svg" alt="Vector logo" class="footer__column__logo"/>
+        <div>
+          <img
+            src="assets/icons/Vector.svg"
+            alt="Vector logo"
+            class="footer__column__logo"
+          />
           <span class="footer__column__logo-text">OceanNFT</span>
         </div>
         <p class="footer__column__text">
