--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="header__main__content__left-div">
           <h1 class="header__main__content__left-div__title">
             Discover, collect, and <br />
-            sell <span class="main__content__left-div__title-span">Timeless</span> NFTs
+            sell <span class="header__main__content__left-div__title-span">Timeless</span> NFTs
           </h1>
           <p class="header__main__content__left-div__text">
             The world’s first and largest digital marketplace for crypto
@@ -91,10 +91,10 @@
             <h4 class="collections__card-content__title">Jhones Nickey</h4>
             <p class="collections__card-content__user">@jhonartist</p>
             <img src="assets/icons/image 46.png" alt="verified icon" />
-            <ul>
-              <li>125 Folowers</li>
-              <li>256 Following</li>
-              <li>129 Artworks</li>
+            <ul class="collections__card-content__list">
+              <li><span class="collections__card-content__list__span">125</span> Folowers</li>
+              <li><span class="collections__card-content__list__span">256</span> Following</li>
+              <li><span class="collections__card-content__list__span">129</span> Artworks</li>
             </ul>
             <button type="submit" class="collections__card-content__btn">
               Follow
@@ -113,10 +113,10 @@
             <h4 class="collections__card-content__title">Cody Fisher</h4>
             <p class="collections__card-content__user">@codyfishe</p>
             <img src="assets/icons/image 46.png" alt="verified icon" />
-            <ul>
-              <li>356 Folowers</li>
-              <li>456 Following</li>
-              <li>89 Artworks</li>
+            <ul class="collections__card-content__list">
+              <li><span class="collections__card-content__list__span">356</span> Folowers</li>
+              <li><span class="collections__card-content__list__span">456</span> Following</li>
+              <li><span class="collections__card-content__list__span">89</span> Artworks</li>
             </ul>
             <button type="submit" class="collections__card-content__btn">
               Follow
@@ -135,10 +135,10 @@
             <h4 class="collections__card-content__title">Jerome Bell</h4>
             <p class="collections__card-content__user">@jeromebt</p>
             <img src="assets/icons/image 46.png" alt="verified icon" />
-            <ul>
-              <li>546 Folowers</li>
-              <li>789 Following</li>
-              <li>54 Artworks</li>
+            <ul class="collections__card-content__list">
+              <li><span class="collections__card-content__list__span">546</span> Folowers</li>
+              <li><span class="collections__card-content__list__span">789</span> Following</li>
+              <li><span class="collections__card-content__list__span">54</span> Artworks</li>
             </ul>
             <button type="submit" class="collections__card-content__btn">
               Follow
@@ -147,44 +147,7 @@
         </div>
       </div>
     </section>
-    <section class="top-sellers">
-      <h3 class="top-sellers__title">
-        Top Sellers this <span class="top-sellers__span">Month</span>
-      </h3>
-      <p class="top-sellers__text">
-        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-        sint. Velit officia consequat duis enim minim mollit.
-      </p>
-      <div class="top-sellers__section-box">
-        <p class="top-sellers__section-box__num">1</p>
-        <img
-          src="assets/images/Ellipse 277.png"
-          alt="women image"
-          class="top-sellers__section-box__img"
-        />
-        <h4 class="top-sellers__section-box__name">Eleanor Pena</h4>
-        <img src="assets/icons/Vector.svg" alt="vector image" />
-        <p>74875</p>
-        <span class="top-sellers__section-box--success">+468.48%</span>
-      </div>
-      <div class="top-sellers__section-box">
-        <p>2</p>
-        <img src="assets/images/Ellipse 277 (1).png" alt="women image" />
-        <h4>Savannah Nguyen</h4>
-        <img src="assets/icons/Vector.svg" alt="vector image" />
-        <p>18599</p>
-        <span class="top-sellers__section-box--alert">+468.48%</span>
-      </div>
-      <div class="top-sellers__section-box">
-        <p>3</p>
-        <img src="assets/images/Ellipse 277 (2).png" alt="women image" />
-        <h4>Arlene McCoy</h4>
-        <img src="assets/icons/Vector.svg" alt="vector image" />
-        <p>45904</p>
-        <span class="top-sellers__section-box--success">+468.48%</span>
-      </div>
-      <button type="submit" class="top-sellers__btn">Explore all</button>
-    </section>
+   
     <article class="subscribe">
       <img
         src="assets/images/unsplash_pVoEPpLw818.png"
