deleted unused img

--- a/index.html
+++ b/index.html
@@ -20,8 +20,22 @@
     <header class="header">
       <nav class="header__nav">
         <div class="header__nav__logo">
-          <img src="assets/icons/Vector.svg" alt="Vector logo" />
+          <svg
+            width="9"
+            height="15"
+            viewBox="0 0 9 15"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M4.48949 11.0195L0.287842 8.5274L4.48692 14.4766L8.6907 8.5274L4.48692 11.0195H4.48949ZM4.55194 0.719788L0.352002 7.72566L4.55194 10.222L8.75358 7.72824L4.55194 0.719788Z"
+              fill="white"
+              fill-opacity="0.8"
+            />
+          </svg>
           <span class="header__nav__logo-text">Ocean</span>NFT
+        </div>
+        <div class="header__nav__toggle">
+          <div class="header__nav__menu"></div>
         </div>
         <ul class="header__nav__list">
           <li class="header__nav__item">Market</li>
@@ -38,7 +52,11 @@
         <div class="header__main__content__left-div">
           <h1 class="header__main__content__left-div__title">
             Discover, collect, and <br />
-            sell <span class="header__main__content__left-div__title-span">Timeless</span> NFTs
+            sell
+            <span class="header__main__content__left-div__title-span"
+              >Timeless</span
+            >
+            NFTs
           </h1>
           <p class="header__main__content__left-div__text">
             The world’s first and largest digital marketplace for crypto
@@ -46,13 +64,27 @@
           </p>
           <button type="submit" class="header__main__content__left-div__btn">
             Explore
-            <img src="assets/icons/arrow-right.svg" alt="Arrow rigth icon" />
           </button>
           <p class="header__main__content__left-div__paragraph">Create NFT’s</p>
           <ul class="header__main__content__left-div__list">
-            <li><span class="header__main__content__left-div__list-span">35m+</span> Artwork</li>
-            <li><span class="header__main__content__left-div__list-span">18m+</span> Auctions</li>
-            <li><span class="header__main__content__left-div__list-span">500k+</span> Artists</li>
+            <li>
+              <span class="header__main__content__left-div__list-span"
+                >35m+</span
+              >
+              Artwork
+            </li>
+            <li>
+              <span class="header__main__content__left-div__list-span"
+                >18m+</span
+              >
+              Auctions
+            </li>
+            <li>
+              <span class="header__main__content__left-div__list-span"
+                >500k+</span
+              >
+              Artists
+            </li>
           </ul>
         </div>
 
@@ -92,9 +124,18 @@
             <p class="collections__card-content__user">@jhonartist</p>
             <img src="assets/icons/image 46.png" alt="verified icon" />
             <ul class="collections__card-content__list">
-              <li><span class="collections__card-content__list__span">125</span> Folowers</li>
-              <li><span class="collections__card-content__list__span">256</span> Following</li>
-              <li><span class="collections__card-content__list__span">129</span> Artworks</li>
+              <li>
+                <span class="collections__card-content__list__span">125</span>
+                Folowers
+              </li>
+              <li>
+                <span class="collections__card-content__list__span">256</span>
+                Following
+              </li>
+              <li>
+                <span class="collections__card-content__list__span">129</span>
+                Artworks
+              </li>
             </ul>
             <button type="submit" class="collections__card-content__btn">
               Follow
@@ -114,9 +155,18 @@
             <p class="collections__card-content__user">@codyfishe</p>
             <img src="assets/icons/image 46.png" alt="verified icon" />
             <ul class="collections__card-content__list">
-              <li><span class="collections__card-content__list__span">356</span> Folowers</li>
-              <li><span class="collections__card-content__list__span">456</span> Following</li>
-              <li><span class="collections__card-content__list__span">89</span> Artworks</li>
+              <li>
+                <span class="collections__card-content__list__span">356</span>
+                Folowers
+              </li>
+              <li>
+                <span class="collections__card-content__list__span">456</span>
+                Following
+              </li>
+              <li>
+                <span class="collections__card-content__list__span">89</span>
+                Artworks
+              </li>
             </ul>
             <button type="submit" class="collections__card-content__btn">
               Follow
@@ -136,9 +186,18 @@
             <p class="collections__card-content__user">@jeromebt</p>
             <img src="assets/icons/image 46.png" alt="verified icon" />
             <ul class="collections__card-content__list">
-              <li><span class="collections__card-content__list__span">546</span> Folowers</li>
-              <li><span class="collections__card-content__list__span">789</span> Following</li>
-              <li><span class="collections__card-content__list__span">54</span> Artworks</li>
+              <li>
+                <span class="collections__card-content__list__span">546</span>
+                Folowers
+              </li>
+              <li>
+                <span class="collections__card-content__list__span">789</span>
+                Following
+              </li>
+              <li>
+                <span class="collections__card-content__list__span">54</span>
+                Artworks
+              </li>
             </ul>
             <button type="submit" class="collections__card-content__btn">
               Follow
@@ -147,7 +206,7 @@
         </div>
       </div>
     </section>
-   
+
     <article class="subscribe">
       <img
         src="assets/images/unsplash_pVoEPpLw818.png"
