--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
           <span class="header__nav__logo-text">Ocean</span>NFT
         </div>
         <div class="header__nav__toggle">
-          <div class="header__nav__menu"></div>
+          <div class="header__nav__menu">
+            <img src="assets/icons/menu.svg" alt="Menu icon" />
+          </div>
         </div>
         <ul class="header__nav__list">
           <li class="header__nav__item">Market</li>
