--- a/index.html
+++ b/index.html
@@ -109,8 +109,10 @@
     <section class="collections">
       <div class="collections__div">
         <h3 class="collections__div__title">Explore Collections</h3>
-        <p class="collections__div__view">View all</p>
-        <img src="assets/icons/arrow-right.svg" alt="arrow right icon" />
+        <div class="collections__div__view">
+          <p>View all</p>
+          <img src="assets/icons/arrow-right.svg" alt="arrow right icon" />
+        </div>
       </div>
 
       <div class="collections__card-div">
